fix: add spacing between end-of-line and decoration attachment
fix (in browser extension) https://github.com/sourcegraph/sourcegraph/issues/567

--- a/src/shared/extensions-client-common.scss
+++ b/src/shared/extensions-client-common.scss
@@ -142,3 +142,7 @@ $body-color-dark: #f2f4f8;
         }
     }
 }
+
+.line-decoration-attachment {
+    margin-left: 0.25rem;
+}
